# ateam-hackathon-jun2024

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.local.postgres  Makefile  README.md  main.py  pyproject.toml
app/: observability.py
app/api/: openai.py
app/api/routers/: ingredient.py  interaction.py  recipe.py  story.py  user.py
app/engine/: postgresdb.py
app/model/: base.py  user.py
app/notebooks/: dalle3.ipynb
app/schema/: base.py  index.py
app/service/: ingredients.py  recipes.py  stories.py  user_preferences.py
config/: index.py
data/: ingredient-facts.txt  ingredients.txt  recipe_output.json  user_preferences.txt
data/story/: 371bd5dd-e812-47b0-8334-2f4ef437755c.json
migration/: env.py
tests/: conftest.py  pytest.ini  test_users.py
